# fall-detection-pose

./: .gitignore  LICENSE  README.md  bench.json  config.yaml  plan.md  pyproject.toml
eval/: metrics.json  splits.yaml
notebooks/: 01_smoke_test.ipynb  02_extract_urfd.ipynb  03_tune_eval.ipynb  04_benchmark.ipynb  05_gradio_demo.ipynb
src/fall_detection/: __init__.py  cli.py  config.py
src/fall_detection/app/: __init__.py  gradio_app.py
src/fall_detection/bench/: __init__.py  benchmark.py
src/fall_detection/eval/: __init__.py  ground_truth.py  matching.py  report.py  splits.py
src/fall_detection/events/: __init__.py  schema.py
src/fall_detection/inference/: __init__.py  extract.py  pose_tracker.py
src/fall_detection/io/: __init__.py  cache.py  urfd.py  video.py
src/fall_detection/rules/: __init__.py  engine.py  features.py  smoothing.py  state_machine.py
src/fall_detection/viz/: __init__.py  annotate.py
tests/: conftest.py  synthetic.py  test_benchmark.py  test_cache.py  test_config.py  test_engine.py  test_features.py  test_gradio_app.py  test_matching.py  test_report.py  test_splits.py  test_state_machine.py
